[package]
name = "ljmrs"
version = "0.1.2"
description = "LabJack LJM Bindings for Rust"
license = "MIT"
edition = "2021"

[dependencies]
libloading = "0.8"
serde = { version = "1.0.192", features = ["std", "derive"], optional = true }
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "macros"], optional = true }

[features]
stream = []
lua = []
tokio = ["dep:tokio"]
default = ["stream", "lua"]

[lib]
name = "ljmrs"
path = "src/lib.rs"
