[package]
name = "ljmrs"
version = "0.2.0"
description = "LabJack LJM Bindings for Rust"
license = "MIT"
edition = "2021"

[dependencies]
libloading = { version = "0.8", optional = true }
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "macros"], optional = true }

[build-dependencies]
bindgen = "0.69.4"

[features]
stream = []
lua = []
tokio = ["dep:tokio"]

dynlink = ["libloading"]
staticlink = []

default = ["stream", "staticlink"]

[lib]
name = "ljmrs"
path = "src/lib.rs"

[[example]]
name = "lua"
path = "examples/lua.rs"
required-features = ["lua"]
